[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/miner.png" type="Texture" id=1]
[ext_resource path="res://src/ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/ShopUI.gd" type="Script" id=3]

[node name="ShopUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -47.0
margin_right = 160.0
margin_bottom = 47.0
color = Color( 0.286275, 0.301961, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 326.0
margin_bottom = 31.0

[node name="BuyMinerButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 31.0
text = "Buy"

[node name="MinerCostLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 6.0
margin_right = 52.0
margin_bottom = 24.0
text = "10"

[node name="TextureRect" type="TextureRect" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_top = 7.0
margin_right = 72.0
margin_bottom = 23.0
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 326.0
margin_bottom = 31.0
rect_min_size = Vector2( 250, 0 )
text = "Launch miners onto planets to gather resources"
autowrap = true

[node name="CloseButton" type="Button" parent="ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -23.0
margin_bottom = 10.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/BuyMinerButton" to="." method="_on_BuyMinerButton_pressed"]
[connection signal="pressed" from="ColorRect/CloseButton" to="." method="_on_CloseButton_pressed"]
